created email form

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.js">
     <title>Form-Validation</title>
 </head>
 
@@ -15,13 +16,17 @@
     <main>
         <form action="/" method="post">
         <label for="uname">User Name: </label>
-        <input type="text" name="uname">
-        <input type="submit" value="Submit">
+        <input type="text" name="uname"> 
     </form>
 
-    <!-- <button>Submit</button> -->
+    <form2 action="/" method="post">
+        <label for="email">Email</label>
+        <input type="email" name="email">
+    </form2>
+    <button id="btn">Submit</button>
+
+    
     </main>
-<a href="app.js"></a> 
+
 </body>
 </html>
-<!-- NEEDS FIXING -->
