--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.js">
-    <title>Form-Validation</title>
-</head>
-
-<header>
-    <h1>Form-Validation</h1>
-</header>
-
-<body>
-
-    <main>
-        <form action="/" method="post">
-        <label for="uname">User Name: </label>
-        <input type="text" name="uname"> 
-    </form>
-
-    <form2 action="/" method="post">
-        <label for="email">Email</label>
-        <input type="email" name="email">
-    </form2>
-    <button id="btn">Submit</button>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <title>Form-Validation</title>
+  </head>
+
+  <header>
+    <h1>Form-Validation</h1>
+  </header>
+
+  <body>
+    <main>
+      <form action="/" method="post">
+        <label for="uname">User Name: </label>
+        <input type="text" name="uname" />
+      </form>
+
+      <form2 action="/" method="post">
+        <label for="email">Email</label>
+        <input type="email" name="email" />
+      </form2>
+      <button id="btn">Submit</button>
     </main>
 
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
